# IR-Agent-Builder

./: .gitignore  Cargo.toml  README.md  _research.txt
.cargo/: config.toml
artifacts/: bundles.yaml  schema.yaml
artifacts/custom/: TEMPLATE.yaml
artifacts/linux/browser/: chrome_linux.yaml  firefox_linux.yaml
artifacts/linux/containers/: docker.yaml  kubernetes.yaml
artifacts/linux/logs/: application.yaml  audit.yaml  auth.yaml  syslog.yaml
artifacts/linux/memory/: lime_dump.yaml  proc_maps.yaml
artifacts/linux/network/: connections.yaml  dns.yaml  firewall.yaml  processes.yaml
artifacts/linux/persistence/: crontabs.yaml  initscripts.yaml  kernel_modules.yaml  systemd.yaml
artifacts/linux/system/: osinfo.yaml  packages.yaml  ssh.yaml  users.yaml
artifacts/windows/browser/: chrome.yaml  edge.yaml  firefox.yaml
artifacts/windows/cloud/: dpapi.yaml  onedrive.yaml  outlook.yaml  teams.yaml
artifacts/windows/eventlogs/: application.yaml  bits.yaml  defender.yaml  powershell.yaml  rdp.yaml  security.yaml  sysmon.yaml  system.yaml  taskscheduler.yaml  wmi.yaml
artifacts/windows/execution/: amcache.yaml  bam.yaml  muicache.yaml  prefetch.yaml  shimcache.yaml  userassist.yaml
artifacts/windows/filesystem/: lnk.yaml  mft.yaml  recyclebin.yaml
artifacts/windows/memory/: fulldump.yaml
artifacts/windows/network/: arpcache.yaml  autoruns.yaml  dnscache.yaml  firewallrules.yaml  netstat.yaml  pslist.yaml  services.yaml  shares.yaml  systeminfo.yaml  usbhistory.yaml  wifihistory.yaml
artifacts/windows/persistence/: scheduledtasks.yaml  startupfolders.yaml
artifacts/windows/registry/: hives.yaml
builder-server/: package-lock.json  package.json
builder-server/src/: server.js
builder-server/src/lib/: artifact-loader.js  aws.js  catalog.js  credential-vault.js  ledger.js
builder-ui/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
builder-ui/src/: App.tsx  main.tsx  styles.css
builder-ui/src/components/steps/: Step1Target.tsx  Step2Artifacts.tsx  Step3Upload.tsx  Step4Encryption.tsx  Step5Performance.tsx  Step6Review.tsx
builder-ui/src/components/ui/: Card.tsx  Form.tsx
builder-ui/src/lib/: api.ts  bundles.ts  theme.tsx  types.ts
collector/: Cargo.toml  build.rs
collector/src/: budget.rs  config.rs  credential_vault.rs  elevation.rs  embedded_config.json  logging.rs  main.rs  report.rs  throttle.rs  zipper.rs
collector/src/acquisition/: mod.rs  raw_ntfs.rs
collector/src/artifacts/: kape.rs  linux_live.rs  live.rs  mod.rs  patterns.rs  registry.rs
collector/src/crypto/: mod.rs  x509.rs
collector/src/upload/: chunked.rs  mod.rs  resume.rs  s3.rs
collector/src/vss/: mod.rs
crates/builder-app/: Cargo.toml
crates/builder-app/src/: app.rs  main.rs  spec.rs
crates/builder-app/src/backend/: artifact_catalog.rs  aws.rs  build.rs  embedded_config.rs  keypair.rs  ledger.rs  mod.rs  sigv4.rs
crates/builder-app/src/ui/: footer.rs  header.rs  mod.rs  sidebar.rs  step1_target.rs  step2_artifacts.rs  step3_upload.rs  step4_encryption.rs  step5_performance.rs  step6_review.rs  theme.rs  widgets.rs
crates/shared-crypto/: Cargo.toml
crates/shared-crypto/src/: credential_vault.rs  lib.rs
docs/: aws-setup.md  decrypt.md  live-acquisition.md  research-summary.md
