[workspace]
resolver = "2"
members = [
    "collector",
    "crates/builder-app",
    "crates/shared-crypto",
]

[workspace.package]
edition = "2021"
version = "0.1.0"
authors = ["DFIR Engineering"]

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = 1
incremental = true
