[package]
name = "builder-app"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "DFIR Agent Builder — desktop wizard for compiling forensic collectors"

[[bin]]
name = "builder-app"
path = "src/main.rs"

[dependencies]
# UI
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow", "persistence"] }
egui = "0.29"
egui_extras = "0.29"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Backend
rusqlite = { version = "0.32", features = ["bundled"] }
rsa = { version = "0.9", features = ["sha2", "pem"] }
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
hmac = "0.12"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
walkdir = "2"

# HTTP (S3 validate)
ureq = { version = "2.10", features = ["tls", "json"] }
url = "2"

# Internal crates
shared-crypto = { path = "../shared-crypto" }

# Misc
anyhow = "1"
log = "0.4"
env_logger = "0.11"
rfd = "0.14"
