[package]
name = "shared-crypto"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Shared crypto + helpers used by both the DFIR builder and collector."

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
aes-gcm = "0.10"
sha2 = "0.10"
hmac = "0.12"
rand = "0.8"
hex = "0.4"
base64 = "0.22"
anyhow = "1"
zeroize = "1"
